--- a/CSS/style.css
+++ b/CSS/style.css
@@ -120,7 +120,7 @@ header {
   align-items: center;
   gap: 8px;
   background: var(--secondary-color);
-  padding: 0px 35px;
+  padding: 5% 35px;
   border-radius: 10px;
   transition: 0.3s;
   font-size: 14px;
@@ -230,9 +230,10 @@ header {
 }
 
 .poster-card p {
-  padding: 12px;
+  padding: 10px;
   font-size: 1rem;
   font-weight: 500;
+  font-size: 12px;
   color: #374151;
 }
 
@@ -323,7 +324,7 @@ header {
 
 .skills {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 10px;
 }
 
@@ -339,7 +340,7 @@ header {
 }
 
 .skills img {
-  width: 200px;
+  width: 300px;
   object-fit: contain;
 }
 
@@ -425,6 +426,14 @@ footer {
     padding: 20px 100px;
   }
 
+  .hero-text h1 {
+    font-size: 24px;
+  }
+
+  .hero-text h2 {
+    font-size: 18px;
+  }
+
   .social {
     justify-content: center;
   }
@@ -433,18 +442,24 @@ footer {
     display: none;
   }
 
-  .hero-text {
-    padding-right: 0;
-    margin-bottom: 20px;
-  }
-
   .hero-text .button p {
     display: none;
   }
 
   .project-selected h1 {
-    font-size: 28px;
+    font-size: 24px;
     text-align: center;
+  }
+
+  #project {
+    padding: 0px 40px;
+    margin-top: -150px;
+    font-size: 12px;
+  }
+
+  .projects-grid img {
+    width: 100%;
+    height: 100%;
   }
 
   .projects-grid {
@@ -452,19 +467,75 @@ footer {
     gap: 10px;
   }
 
+  #poster-project {
+    padding: 60px 100px;
+    text-align: center;
+  }
+
+  #poster-project h1 {
+    font-size: 22px;
+  }
+
+  #more-project {
+    padding: 60px 40px;
+  }
+
   #more-about {
+    padding: 60px 40px;
     flex-direction: column;
     text-align: center;
   }
 
+  #more-about img {
+    max-width: 100%;
+  }
+
+  #skills {
+    padding: 0px 0px;
+    align-items: center;
+  }
+
+  #skills h1 {
+    font-size: 22px;
+    margin-bottom: 80px;
+  }
+
+  .skills {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 0px;
+  }
+
+  .skills .grid {
+    align-items: center;
+    transition: 0.3s;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+    margin-top: -80px;
+  }
+
+  .skills img {
+    width: 200px;
+  } 
+
   footer {
     flex-direction: column;
     padding: 40px 80px;
+    margin-top: 40px;
+  }
+
+  .footer-content h3 {
+    font-size: 16px;
   }
 
   .footer-content {
     margin-left: 0;
     margin-bottom: 20px;
+  }
+
+  .footer-content .social a {
+    width: 15px;
+    height: 15px;
+    margin: 0 5px;
+    font-size: 12px;
   }
 
   .footer-img {
